Add support for time-zone

--- a/clock_svg.html
+++ b/clock_svg.html
@@ -24,7 +24,11 @@
 </g>
 </svg>
 </div>
-</body>
+<select id="timezone">
+	<option class="timezone-option" onclick="changeTimezone(this)" value="ist" id="ist">Indian Standard Time</option>
+	<option class="timezone-option" onclick="changeTimezone(this)" value="gmt" id="gmt">Greenwich Mean Time</option>
+</select>
 <script src="js/main.js" type="text/javascript"></script>
+</body>
 
 </html>
