--- a/clock_svg.html
+++ b/clock_svg.html
@@ -24,9 +24,9 @@
 </g>
 </svg>
 </div>
-<select id="timezone">
-	<option class="timezone-option" onclick="changeTimezone(this)" value="ist" id="ist">Indian Standard Time</option>
-	<option class="timezone-option" onclick="changeTimezone(this)" value="gmt" id="gmt">Greenwich Mean Time</option>
+<select id="timezone" onclick="changeTimezone(this)">
+	<option class="timezone-option" value="ist" id="ist">Indian Standard Time</option>
+	<option class="timezone-option" value="gmt" id="gmt">Greenwich Mean Time</option>
 </select>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
